# ds-projects

./: .gitignore  README.md
covid-analysis/: README.md  pyproject.toml
covid-analysis/covid_analysis/: covid.ipynb  covid.py
education_data_analysis/: README.md  pyproject.toml
facebook_rottentomatoes_classification/: analysis.ipynb
heath_data_analysis/: README.md  pyproject.toml
peakdata_keyword_detection/: nlp.ipynb
predicting_price/: Predicting price.ipynb
py-sqldb/: pyproject.toml
py-sqldb/py_sqldb/: data_analysis.ipynb  sql-tut.ipynb
regression_capital_one_syn/: regression.ipynb
uber_data_analysis/: analysis.ipynb
