[tool.poetry]
name = "covid-analysis"
version = "0.1.0"
description = ""
authors = ["kevin-v96 <kevinvegda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.22.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
notebook = "^7.2.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
