[tool.poetry]
name = "py-sqldb"
version = "0.1.0"
description = ""
authors = ["kevin-v96 <kevinvegda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
pandas = "^2.2.2"
ipython-sql = "^0.5.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
